// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish-element should handle publishing a non-existent element 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The requested element could not be found","status":404,"operationStatus":"ContentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`publish-element should publish a valid element 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
